[package]
name = "khamoshchat"
version = "0.1.0"
edition = "2021"
description = "Pure Rust CLI client for Khamoshchat E2EE messaging"
license = "GPL-3.0"

[dependencies]
# ── Async runtime ──────────────────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# ── MQTT ────────────────────────────────────────────────────────────────────
rumqttc = "0.25"

# ── Database ────────────────────────────────────────────────────────────────
rusqlite = { version = "0.32", features = ["sqlcipher"] }

# ── E2EE ────────────────────────────────────────────────────────────────────
# libsignal-dezire hosted on GitHub — branch main
libsignal-dezire = { git = "https://github.com/debarkamondal/libsignal-dezire", branch = "main" }

# ── CLI ─────────────────────────────────────────────────────────────────────
clap = { version = "4.5", features = ["derive"] }
colored = "2"

# ── TUI (optional, future) ─────────────────────────────────────────────────


# ── Auth ────────────────────────────────────────────────────────────────────
reqwest = { version = "0.12", features = ["json"] }
tiny_http = "0.12"           # Local OAuth redirect server

# ── Keyring ─────────────────────────────────────────────────────────────────
keyring = "3"

# ── Crypto helpers ──────────────────────────────────────────────────────────
rand = "0.8"
rand_core = "0.6"
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "serde"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Logging ─────────────────────────────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Misc ────────────────────────────────────────────────────────────────────
urlencoding = "2"
open = "5"
dirs = "5"

# ── Time ────────────────────────────────────────────────────────────────────
chrono = { version = "0.4", features = ["serde"] }

# ── Error handling ──────────────────────────────────────────────────────────
thiserror = "2"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
